--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ class: center, middle, inverse
 
 .footnote.attribution[
 
-Largely ripped off from [Ladies Learning Code Python][LLC].
+Largely ripped off from [Ladies Learning Code Python][LLC]
 
 [LLC]: https://github.com/ladieslearningcode/Python
 
@@ -29,7 +29,7 @@ Largely ripped off from [Ladies Learning Code Python][LLC].
   src="http://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work
 is licensed under a <a rel="license"
   href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
-  Attribution 4.0 International License</a>.
+  Attribution 4.0 International License</a>
 ]
 ]
 
@@ -165,8 +165,6 @@ class: lesson-start
 
 - Program/script
 --
-
-- Comments
 
 
 
@@ -623,7 +621,8 @@ Though the term in computer science in general is just "variable".
 >>> num1 = 4
 >>> num1
 4
->>> num2 = 1234.5 >>> num2
+>>> num2 = 1234.5
+>>> num2
 1234.5
 ```
 --
@@ -1250,7 +1249,16 @@ That's all, folks!
     </textarea>
     <script src="./js/remark-latest.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-      var slideshow = remark.create();
+      var slideshow = remark.create({
+        ratio: '16:10',
+        navigation: {
+          // Disable navigating using scroll
+          scroll: false
+        },
+        // Default highlight langauges is...
+        highlightLangauge: 'python',
+        highlightStyle: 'github',
+      });
     </script>
   </body>
 </html>
