Added license stuff, with proper attribution.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@ class: center, middle, inverse
 
 # Learning Code with Python
 
+## Eddie Antonio Santos
+
 .footnote.attribution[
 
-Largely ripped off from [Ladies Learning Code Python][LLC]
+Largely ripped off from [Ladies Learning Code Python][LLC] by Peter Newhook
 
 [LLC]: https://github.com/ladieslearningcode/Python
 
